--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,6 @@
+.header--nav-toggle{
+    display:none;
+}
 @font-face {
     font-family: 'Montserrat';
     src: url("fonts/Montserrat-Black.eot");
