--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3622,3 +3622,218 @@ body {
         display: none
     }
 }
+/* Девятый слайдер */
+
+.work9 {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 960px;
+    max-width: 80%;
+    height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin: 0 auto
+}
+
+@media (max-width: 1180px) {
+    .work9 {
+        max-width: 100%
+    }
+}
+
+.work9 h2 {
+    margin: 0 0 20px 0;
+    font-size: 30px;
+    text-align: center
+}
+
+.work--lockup9 {
+    position: relative
+}
+
+.work--lockup9 .slider9 {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+    list-style: none
+}
+
+.work--lockup9 .slider--item9 {
+    position: absolute;
+    display: none;
+    text-align: center
+}
+
+.work--lockup9 .slider--item9 a {
+    text-decoration: none;
+    color: #858585
+}
+
+.work--lockup9 .slider--item-title9 {
+    margin-top: 10px;
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: uppercase
+}
+
+.work--lockup9 .slider--item-description9 {
+    display: none;
+    max-width: 250px;
+    margin: 0 auto
+}
+
+.work--lockup9 .slider--item-image9 {
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+    border-radius: 50%;
+    overflow: hidden
+}
+
+.work--lockup9 .slider--item-image9 img {
+    width: 100%
+}
+
+.work--lockup9 .slider--item-left9 {
+    top: 50%;
+    left: 0;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    display: block
+}
+
+.work--lockup9 .slider--item-right9 {
+    top: 50%;
+    right: 0;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    display: block
+}
+
+.work--lockup9 .slider--item-center9 {
+    position: relative;
+    top: 30px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    display: block
+}
+
+.work--lockup9 .slider--item-center9 a {
+    color: #fff
+}
+
+.work--lockup9 .slider--item-center9 .slider--item-title9 {
+    margin-top: 25px;
+    font-size: 16px
+}
+
+.work--lockup9 .slider--item-center9 .slider--item-description9 {
+    display: block
+}
+
+.work--lockup9 .slider--item-center9 .slider--item-image9 {
+    width: 300px;
+    height: 300px
+}
+
+.work--lockup9 .slider--next9,
+.work--lockup9 .slider--prev9 {
+    position: absolute;
+    top: 160px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 50px;
+    height: 50px;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    background-color: #282828;
+    border-radius: 50%;
+    cursor: pointer
+}
+
+.work--lockup9 .slider--next9 svg,
+.work--lockup9 .slider--prev9 svg {
+    width: 20px;
+    fill: #fff
+}
+
+.work--lockup9 .slider--next9 {
+    right: 0
+}
+
+.work--lockup9 .slider--prev9 {
+    left: 0
+}
+
+@media (max-width: 900px) {
+    .work--lockup9 .slider--item-image9 {
+        width: 120px;
+        height: 120px
+    }
+
+    .work--lockup9 .slider--item-center9 .slider--item-image9 {
+        width: 240px;
+        height: 240px
+    }
+
+    .work--lockup9 .slider--next9,
+    .work--lockup9 .slider--prev9 {
+        top: 130px
+    }
+}
+
+@media (max-width: 767px) {
+    .work--lockup9 .slider9 {
+        width: 75%
+    }
+
+    .work--lockup9 .slider--item-image9 {
+        width: 90px;
+        height: 90px
+    }
+
+    .work--lockup9 .slider--item-center9 .slider--item-image9 {
+        width: 190px;
+        height: 190px
+    }
+
+    .work--lockup9 .slider--next9,
+    .work--lockup9 .slider--prev9 {
+        top: 105px
+    }
+}
+
+@media (max-width: 600px) {
+    .work--lockup9 .slider9 {
+        width: auto
+    }
+
+    .work--lockup9 .slider--item-left9,
+    .work--lockup9 .slider--item-right9 {
+        display: none
+    }
+}
