--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2762,7 +2762,7 @@ body {
         display: none
     }
 }
-/* Пятый слайдер */
+/* Шестой слайдер */
 
 .work5 {
     position: relative;
@@ -2977,7 +2977,7 @@ body {
         display: none
     }
 }
-/* Шестой слайдер */
+/* Седьмой слайдер */
 
 .work6 {
     position: relative;
@@ -3192,7 +3192,7 @@ body {
         display: none
     }
 }
-/* Седьмой слайдер */
+/* Восьмой слайдер */
 
 .work7 {
     position: relative;
@@ -3407,7 +3407,7 @@ body {
         display: none
     }
 }
-/* Восьмой слайдер */
+/* Девятый слайдер */
 
 .work8 {
     position: relative;
@@ -3622,7 +3622,7 @@ body {
         display: none
     }
 }
-/* Девятый слайдер */
+/* Десятый слайдер */
 
 .work9 {
     position: relative;
@@ -3837,7 +3837,7 @@ body {
         display: none
     }
 }
-/* Десятый слайдер */
+/* Одиннадцатый слайдер */
 
 .work10 {
     position: relative;
