--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -685,8 +685,11 @@ body {
 .side-nav li:nth-child(11)::before {
     content: "11"
 }
-.side-nav li:nth-child(12)::before {
+.side-nav li:nth-child(11)::before {
     content: "12"
+}
+.side-nav li:nth-child(12)::before {
+    content: "13"
 }
 .side-nav li.is-active {
     color: #0f33ff;
